Bug 163959 - WebAssembly: fix unknown section name handling, and check for section size overflow
Summary: WebAssembly: fix unknown section name handling, and check for section size ov...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: JF Bastien
URL:
Keywords:
Depends on:
Blocks: 159775 163963
  Show dependency treegraph
 
Reported: 2016-10-25 11:34 PDT by JF Bastien
Modified: 2016-10-25 14:13 PDT (History)
5 users (show)

See Also:


Attachments
patch (3.53 KB, patch)
2016-10-25 11:37 PDT, JF Bastien
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description JF Bastien 2016-10-25 11:34:16 PDT
See: https://github.com/WebAssembly/design/blob/master/BinaryEncoding.md#high-level-structure

Name length and name are already included in the payload length.
Comment 1 JF Bastien 2016-10-25 11:37:32 PDT
Created attachment 292792 [details]
patch
Comment 2 WebKit Commit Bot 2016-10-25 14:13:36 PDT
Comment on attachment 292792 [details]
patch

Clearing flags on attachment: 292792

Committed r207843: <http://trac.webkit.org/changeset/207843>
Comment 3 WebKit Commit Bot 2016-10-25 14:13:39 PDT
All reviewed patches have been landed.  Closing bug.