WebAssembly: fix unknown section name handling, and check for section size overflow https://bugs.webkit.org/show_bug.cgi?id=163959

See: https://github.com/WebAssembly/design/blob/master/BinaryEncoding.md#high-level-structure

Name length and name are already included in the payload length.

Reviewed by Filip Pizlo.

* wasm/WasmModuleParser.cpp:
(JSC::Wasm::ModuleParser::parse):


Canonical link: https://commits.webkit.org/181700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207843 268f45cc-cd09-0410-ab3c-d52691b4dbfc